k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: user-app
  annotations:
    linkerd.io/inject: enabled
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: baseline
