k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-app
  namespace: user-app
spec:
  replicas: 2

  selector:
    matchLabels:
      app: user-app

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0

      maxSurge: 1

  template:
    metadata:
      labels:
        app: user-app
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
        prometheus.io/path: "/metrics"
    spec:
      serviceAccountName: user-app

      containers:
        - name: user-app

          image: ghcr.io/ishaqattah/user-app:latest
          imagePullPolicy: Always

          ports:
            - name: http
              containerPort: 8080
              protocol: TCP

          securityContext:
            runAsNonRoot: true
            runAsUser: 65532
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]

          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "200m"
              memory: "128Mi"

          startupProbe:
            httpGet:
              path: /startup
              port: 8080
            failureThreshold: 30
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 3
            timeoutSeconds: 5

          readinessProbe:
            httpGet:
              path: /readyz
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 5
            failureThreshold: 2
            timeoutSeconds: 3
