k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-app
  namespace: user-app
  labels:
    app: user-app
spec:
  type: ClusterIP

  selector:
    app: user-app
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
