k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-app
  namespace: user-app
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-issuer
spec:
  ingressClassName: nginx

  tls:
    - hosts:
        - user-app.local
      secretName: user-app-tls

  rules:
    - host: user-app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: user-app
                port:
                  number: 8080
